# personal-finance-tracker-app

./: .gitignore  CLAUDE.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  deploy-flags.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_classification_tables.py  003_add_icon_to_categories.py  004_add_users_ledgers_ledger_members.py  005_add_category_sort_order.py  006_add_transaction_type.py  007_transaction_category_fk.py  008_add_parsed_json_to_import_rows.py  009_add_custom_parser_configs.py  011_add_duplicate_of_id.py  012_widen_icon_columns.py  54a5ec6302b6_widen_avatar_url_to_text.py  f056c0ec080f_add_is_duplicate_to_transactions.py
backend/app/: config.py  main.py  utils.py
backend/app/constants/: categories.py  transaction_type.py
backend/app/core/: security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  category_model.py  classification_log_model.py  custom_parser_config_model.py  import_model.py  import_row_model.py  transaction_model.py  user_model.py
backend/app/parsers/: __init__.py  base.py  bmo_parser.py  bofa_parser.py  chase_parser.py  dynamic_parser.py  registry.py  walmart_rewards_parser.py  wealthsimple_parser.py
backend/sample_data/: bofa_sample.csv  chase_sample.csv  seed_transactions.py
backend/scripts/: migrate_sqlite_to_pg.py
backend/tests/: conftest.py  test_bmo_parser.py  test_dynamic_parser.py  test_import_flow.py  test_llm_classifier.py  test_parsers.py  test_transaction_service.py  test_walmart_rewards_parser.py
(+85 files in other folders)
